app/src/main/java/sdk/api/development/examples/festivo_api/errors/AuthenticationError.java
package sdk.api.development.examples.festivo_api.errors;

public class AuthenticationError extends RuntimeException {
    
}